<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="app_name">要跑</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_not">未登录</string>
    <string name="register_tip1">登录众辉跑步</string>
    <string name="register_tip2">您可以使用以下账号登录</string>
	<string name="image_des">图片说明</string>
	<string name="back_text">返回</string>
	
	<!-- 设置页面 -->
	<string name="setting_title">设置</string>
	<string name="setting_personal">个人信息</string>
	<string name="setting_clause">服务协议</string>
	<string name="setting_about">关于</string>
	
	<!-- 第三方web页面 -->
	<string name="thirdweb_title">2014要跑24小时接力赛</string>
</resources>
