<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	
	<!-- title栏 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/red_bg"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/setting_back_btn"
			android:layout_width="75dp"
			android:layout_height="45dp"
			android:gravity="center"
			android:background="@drawable/back_btn"
			android:text="@string/back_text"
			android:textColor="@color/white"
			android:textSize="18sp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="75dp"
			android:gravity="center"
			android:text="@string/setting_title"
			android:textColor="@color/white"
			android:textSize="22sp" />

	</LinearLayout>
	
	<!-- 个人信息 -->
	<LinearLayout
		android:id="@+id/personal_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/setting_item_layout"
		android:clickable="true"
		android:orientation="horizontal" >

		<ImageView
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:src="@drawable/setting_personal"
			android:contentDescription="@string/image_des" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="left|center"
			android:text="@string/setting_personal"
			android:textSize="24sp"/>

	</LinearLayout>
	
	<!-- 边线 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#d6d6d6">
	</LinearLayout>
	
	<!-- 服务条款 -->
	<LinearLayout
		android:id="@+id/clause_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/setting_item_layout"
		android:clickable="true"
		android:orientation="horizontal" >

		<ImageView
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:src="@drawable/setting_clause"
			android:contentDescription="@string/image_des" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="left|center"
			android:text="@string/setting_clause"
			android:textSize="24sp"/>

	</LinearLayout>
	
	<!-- 边线 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#d6d6d6">
	</LinearLayout>
	
	<!-- 关于 -->
	<LinearLayout
		android:id="@+id/about_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/setting_item_layout"
		android:clickable="true"
		android:orientation="horizontal" >

		<ImageView
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:src="@drawable/setting_about"
			android:contentDescription="@string/image_des" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="left|center"
			android:text="@string/setting_about"
			android:textSize="24sp"/>

	</LinearLayout>
	
	<!-- 边线 -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#d6d6d6">
	</LinearLayout>
</LinearLayout>